# mimageviewer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  analyze_bench.py  build.rs  panic_output.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/susie-worker/: Cargo.toml
crates/susie-worker/src/: lib.rs  main.rs  plugin.rs  protocol.rs
crates/susie-worker/tests/: plugin_decode.rs
docs/: README.md  architecture-overview.md  async-architecture.md  bench-scroll-report.md  catalog-design.md  display-pipeline.md  dpi-multimonitor-issue.md  e2e-smoke-test.md  inpaint-directml-investigation.md  pdf-issues.md  perf-investigation-handoff.md  plan-v0.7.0.md  preset-and-adjustment.md  screenshot-howto.md  spec.md  thumbnail-memory-redesign.md  ui-snapshot-policy.md  virtual-folders.md
htdocs/: index.html
htdocs/mimageviewer/: index.html
htdocs/mimageviewer/manual/: adjustment.html  analysis.html  erase.html  faq.html  formats.html  fullscreen.html  getting-started.html  grid.html  index.html  settings.html  shortcuts.html  style.css  troubleshooting.html
installer/: mimageviewer.iss
models/: anime_classifier_mobilenetv3.onnx  dejpg_realplksr_otf.onnx  realcugan_4x_conservative.onnx  realesrgan_x4plus_anime_6b.onnx  waifu2x_cunet_noise3_scale2x.onnx
scripts/: analyze_perf.py  convert_anime6b_to_onnx.py  convert_realcugan_to_onnx.py  setup-models.sh  setup-pdfium.sh  setup-susie-worker.sh
src/: adjustment.rs  adjustment_db.rs  app.rs  archive_cache.rs  archive_converter.rs  catalog.rs  data_dir.rs  data_move.rs  dwm_transitions.rs  exif_reader.rs  fast_resize.rs  folder_tree.rs  fs_animation.rs  gpu_info.rs  grid_item.rs  instance_lock.rs  lib.rs  logger.rs  main.rs  mask_db.rs  monitor.rs  open_with.rs  os_theme.rs  path_key.rs  pdf_loader.rs  pdf_passwords.rs  perf.rs  png_metadata.rs  post_filter.rs  rating_db.rs  rotation_db.rs  search_index_db.rs  search_query.rs  settings.rs  sidecar.rs  spread_db.rs  stats.rs  susie_loader.rs  sys_memory.rs  thumb_loader.rs  (+11 more)
src/ai/: classify.rs  denoise.rs  inpaint.rs  mod.rs  model_manager.rs  runtime.rs  upscale.rs
src/ui_dialogs/: about.rs  ai_model_setup.rs  archive_cache_manager.rs  archive_convert.rs  cache_creator.rs  cache_manager.rs  cache_policy.rs  context_menu.rs  data_move.rs  duplicate_settings.rs  exif_settings.rs  fav_add.rs  favorites_editor.rs  index_creator.rs  mod.rs  open_folder.rs  pdf_password.rs  preferences.rs  rotation_reset.rs  slideshow_settings.rs  stats_dialog.rs  thumb_quality.rs  thumb_quality_fullscreen.rs  toolbar_settings.rs
tests/: catalog_integration.rs  settings_integration.rs  sidecar_import.rs  susie_integration.rs  test_ai_upscale.rs  test_archive_convert.rs  test_tile_blend.rs  test_zip_enumerate.rs  ui_snapshot.rs  zip_integration.rs
tools/: make_icon.py
tools/png2mag/: Cargo.toml
tools/png2mag/src/: encoder.rs  main.rs  quantize.rs
