[package]
name = "mimageviewer"
version = "0.2.0"
edition = "2024"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Imaging",
    "Win32_Foundation",
] }

[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
image = { version = "0.25", features = ["jpeg", "png", "webp", "bmp", "gif"] }
rayon = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webp = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
