[package]
name = "mimageviewer"
version = "0.5.0"
edition = "2024"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Imaging",
    "Win32_Foundation",
] }

[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
image = { version = "0.25", features = ["jpeg", "png", "webp", "bmp", "gif"] }
png = "0.18"
flate2 = "1"
kamadak-exif = "0.6"
rexif = "0.7"
rayon = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webp = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
turbojpeg = { version = "1", features = ["image"] }
pdfium-render = { version = "0.8", features = ["thread_safe"] }
windows-dpapi = "0.2"
base64 = "0.22"
ort = { version = "2.0.0-rc.12", features = ["directml", "ndarray"] }
ndarray = "0.17"
ureq = "3"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
