[workspace]
members = ["crates/susie-worker", "tools/png2mag"]

[package]
name = "mimageviewer"
version = "0.7.1"
edition = "2024"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Imaging",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
] }

[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
image = { version = "0.25", features = ["jpeg", "png", "webp", "bmp", "gif"] }
# SIMD (SSE4.1/AVX2) 実装のリサイズ。image crate の imageops::resize はスカラー実装で
# 7K-9K クラスの画像で秒単位かかるため、clamp_dynamic_for_gpu とサムネイル生成で使用。
fast_image_resize = { version = "5", features = ["image"] }
png = "0.18"
flate2 = "1"
kamadak-exif = "0.6"
rexif = "0.7"
rayon = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webp = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
sevenz-rust2 = "0.20"
delharc = "0.6"
turbojpeg = { version = "1", features = ["image"] }
pdfium-render = { version = "0.8", features = ["thread_safe"] }
windows-dpapi = "0.2"
base64 = "0.22"
ort = { version = "2.0.0-rc.12", features = ["directml", "ndarray"] }
ndarray = "0.17"

[dev-dependencies]
tempfile = "3"
# egui UI の回帰テスト用 (WCAG 検証 + 見た目のスナップショット)。
# egui 0.33 系統に合わせて 0.33.x を指定。
egui_kittest = { version = "0.33", features = ["snapshot", "wgpu"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
